# NovaCrop-GenomeBridge

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  mcptest.py
app/configs/: config.py
app/graphs/: .env.example  __init__.py  api_models.py  genome_bridge_graph.py  graph_factory.py  state.py
app/graphs/helpers/: evidence_helpers.py  fetch_helpers.py
app/graphs/nodes/: __init__.py  classify_route.py  fetch_both.py  fetch_external.py  fetch_internal.py  plan_queries.py  prepare_evidence.py  synthesize_answer.py  validate_sync.py
app/graphs/prompts/: classify_route.py  plan_queries.py  synthesize_answer.py  validate_sync.py
app/graphs/schemas/: query_plan.py  route_classification.py  validation_assessment.py
app/services/mcp/: __init__.py  mcp_factory.py  mcp_service.py  models.py  provider_factory.py
app/services/mcp/clients/: __init__.py  base_client.py  streamable_http_client.py
app/services/mcp/providers/: __init__.py  base_provider.py  pubmed_provider.py
app/services/rag/: models.py  rag_factory.py  rag_service.py
app/services/rag/embeddings/: __init__.py  embedding_service.py
app/services/rag/loaders/: __init__.py  base_loader.py  loader_factory.py
app/services/rag/loaders/pdf/: __init__.py  pdf_loader.py
app/services/rag/loaders/txt/: __init__.py  txt_loader.py
app/services/rag/splitters/: __init__.py  text_splitter_service.py
app/services/rag/vector_db/: __init__.py  pinecone_service.py
data/txt/: Drought_Tolerance_Rice.txt
