[project]
name = "rag-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "mcp[http]>=1.28.0",
    "openai>=2.44.0",
    "pinecone>=9.1.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
